# gateway/openapi.yaml
@@ -1,18 +1,5 @@
 components:
   schemas:
-    BadRequest:
-      properties:
-        message:
-          title: Message
-          type: string
-        status:
-          default: error
-          title: Status
-          type: string
-      required:
-      - message
-      title: BadRequest
-      type: object
     CiMetadata:
       description: Model for collection instrument metadata
       properties:
@@ -79,6 +66,19 @@ components:
       required:
       - version
       title: DeploymentStatus
+      type: object
+    ExceptionResponseModel:
+      properties:
+        message:
+          title: Message
+          type: string
+        status:
+          title: Status
+          type: string
+      required:
+      - status
+      - message
+      title: ExceptionResponseModel
       type: object
     HTTPValidationError:
       properties:
@@ -210,10 +210,12 @@ paths:
         '500':
           content:
             application/json:
+              example:
+                message: Unable to process request
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Internal error. This is triggered when something an unexpected
-            error occurs on the server side.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Internal Server Error
       summary: Http Get Status
   /v1/ci_metadata:
     get:
@@ -225,7 +227,7 @@ paths:
         example: '0005'
         in: query
         name: form_type
-        required: true
+        required: false
         schema:
           description: The form type of the CI
           title: Form Type
@@ -234,7 +236,7 @@ paths:
         example: en
         in: query
         name: language
-        required: true
+        required: false
         schema:
           description: The language of the CI
           title: Language
@@ -243,7 +245,7 @@ paths:
         example: '123'
         in: query
         name: survey_id
-        required: true
+        required: false
         schema:
           description: The survey ID of the CI
           title: Survey Id
@@ -252,25 +254,26 @@ paths:
         '200':
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/CiMetadata'
-          description: Successfully fetched the metadata of a CI. This is illustrated
-            with the returned response containing the metadata of the CI.
+              schema: {}
+          description: Successful Response
         '400':
           content:
             application/json:
+              example:
+                message: Invalid search parameters provided
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered by when a bad request body is
-            provided. The response will inform the user what required parameter they
-            are missing from the request.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Bad Request
         '404':
           content:
             application/json:
+              example:
+                message: No schema metadata to update
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered when there is no CI data that
-            matches the request provided.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Not Found
         '422':
           content:
             application/json:
@@ -278,8 +281,14 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
         '500':
-          description: Internal error. This is triggered when something an unexpected
-            error occurs on the server side.
+          content:
+            application/json:
+              example:
+                message: Unable to process request
+                status: error
+              schema:
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Internal Server Error
       summary: Http Get Ci Metadata V1
   /v1/dev/teardown:
     delete:
@@ -291,7 +300,7 @@ paths:
         example: '123'
         in: query
         name: survey_id
-        required: true
+        required: false
         schema:
           description: The survey ID of the CI to be deleted.
           title: Survey Id
@@ -301,23 +310,25 @@ paths:
           content:
             application/json:
               schema: {}
-          description: Successfully deleted a CI's schema and metadata. This is illustrated
-            with the response informing the user of the survey_id that has been deleted.
+          description: Successful Response
         '400':
           content:
             application/json:
+              example:
+                message: Invalid search parameters provided
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered by when a bad request body is
-            provided. The response will inform the user what required parameter they
-            are missing from the request.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Bad Request
         '404':
           content:
             application/json:
+              example:
+                message: No CI to delete
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered when there is no CI data that
-            matches the request provided.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Not Found
         '422':
           content:
             application/json:
@@ -325,8 +336,14 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
         '500':
-          description: Internal error. This is triggered when something an unexpected
-            error occurs on the server side.
+          content:
+            application/json:
+              example:
+                message: Unable to process request
+                status: error
+              schema:
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Internal Server Error
       summary: Http Delete Ci V1
   /v1/publish_collection_instrument:
     post:
@@ -349,14 +366,6 @@ paths:
                 $ref: '#/components/schemas/CiMetadata'
           description: Successfully created a CI. This is illustrated with the returned
             response containing the metadata of the CI.
-        '400':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered by when a bad request body is
-            provided. The response will inform the user what required parameter they
-            are missing from the request.
         '422':
           content:
             application/json:
@@ -364,20 +373,26 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
         '500':
-          description: Internal error. This is triggered when something an unexpected
-            error occurs on the server side.
+          content:
+            application/json:
+              example:
+                message: Unable to process request
+                status: error
+              schema:
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Internal Server Error
       summary: Http Post Ci Metadata V1
   /v1/retrieve_collection_instrument:
     get:
-      description: GET method that fetches a CI schema by it's survey_id, form_type
-        and language.
+      description: GET method that fetches a CI schema by survey_id, form_type and
+        language.
       operationId: http_get_ci_schema_v1_v1_retrieve_collection_instrument_get
       parameters:
       - description: The form type of the CI
         example: '0005'
         in: query
         name: form_type
-        required: true
+        required: false
         schema:
           description: The form type of the CI
           title: Form Type
@@ -386,7 +401,7 @@ paths:
         example: en
         in: query
         name: language
-        required: true
+        required: false
         schema:
           description: The language of the CI
           title: Language
@@ -395,7 +410,7 @@ paths:
         example: '123'
         in: query
         name: survey_id
-        required: true
+        required: false
         schema:
           description: The survey ID of the CI
           title: Survey Id
@@ -411,18 +426,21 @@ paths:
         '400':
           content:
             application/json:
+              example:
+                message: Invalid search parameters provided
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered by when a bad request body is
-            provided. The response will inform the user what required parameter they
-            are missing from the request.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Bad Request
         '404':
           content:
             application/json:
+              example:
+                message: No CI found
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered when there is no CI data that
-            matches the request provided.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Not Found
         '422':
           content:
             application/json:
@@ -430,8 +448,14 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
         '500':
-          description: Internal error. This is triggered when something an unexpected
-            error occurs on the server side.
+          content:
+            application/json:
+              example:
+                message: Unable to process request
+                status: error
+              schema:
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Internal Server Error
       summary: Http Get Ci Schema V1
   /v1/update_status:
     put:
@@ -454,23 +478,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CiMetadata'
-          description: Successfully set CI status to PUBLISHED. This is illustrated
-            by the response returning the GUID of the CI metadata that has been updated.
+          description: Successfully set CI status to PUBLISHED OR CI status already
+            set to PUBLISHED so no change
         '400':
           content:
             application/json:
+              example:
+                message: Invalid search parameters provided
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered by when a bad request body is
-            provided. The response will inform the user what required parameter they
-            are missing from the request.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Bad Request
         '404':
           content:
             application/json:
+              example:
+                message: No schema metadata to update
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered when there is no CI data that
-            matches the request provided.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Not Found
         '422':
           content:
             application/json:
@@ -478,8 +505,14 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
         '500':
-          description: Internal error. This is triggered when something an unexpected
-            error occurs on the server side.
+          content:
+            application/json:
+              example:
+                message: Unable to process request
+                status: error
+              schema:
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Internal Server Error
       summary: Http Put Status V1
   /v2/ci_metadata:
     get:
@@ -488,13 +521,9 @@ paths:
 
         The user has multiple ways of querying the metadata.
 
-        1. Provide survey_id, form_type, language and status.
+        1. Provide survey_id, form_type, language.
 
-        2. Provide survey_id, form_type, language.
-
-        3. Provide status.
-
-        4. Provide no parameters.'
+        2. Provide no parameters.'
       operationId: http_get_ci_metadata_v2_v2_ci_metadata_get
       parameters:
       - description: form type to get
@@ -515,15 +544,6 @@ paths:
           description: language to get
           title: Language
           type: string
-      - description: status to get
-        example: draft
-        in: query
-        name: status
-        required: false
-        schema:
-          description: status to get
-          title: Status
-          type: string
       - description: survey id to get
         example: '123'
         in: query
@@ -537,24 +557,26 @@ paths:
         '200':
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/CiMetadata'
-          description: Successfully Queried a CI
+              schema: {}
+          description: Successful Response
         '400':
           content:
             application/json:
+              example:
+                message: Invalid search parameters provided
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered by when a bad request body is
-            provided. The response will inform the user what required parameter they
-            are missing from the request.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Bad Request
         '404':
           content:
             application/json:
+              example:
+                message: No CI found
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered when there is no CI data that
-            matches the request provided.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Not Found
         '422':
           content:
             application/json:
@@ -562,12 +584,18 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
         '500':
-          description: Internal error. This is triggered when something an unexpected
-            error occurs on the server side.
+          content:
+            application/json:
+              example:
+                message: Unable to process request
+                status: error
+              schema:
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Internal Server Error
       summary: Http Get Ci Metadata V2
   /v2/retrieve_collection_instrument:
     get:
-      description: GET method that fetches a CI schema by it's GUID.
+      description: GET method that fetches a CI schema by GUID.
       operationId: http_get_ci_schema_v2_v2_retrieve_collection_instrument_get
       parameters:
       - description: The global unique ID of the CI
@@ -590,18 +618,21 @@ paths:
         '400':
           content:
             application/json:
+              example:
+                message: Invalid search parameters provided
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered by when a bad request body is
-            provided. The response will inform the user what required parameter they
-            are missing from the request.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Bad Request
         '404':
           content:
             application/json:
+              example:
+                message: No CI found
+                status: error
               schema:
-                $ref: '#/components/schemas/BadRequest'
-          description: Bad request. This is triggered when there is no CI data that
-            matches the request provided.
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Not Found
         '422':
           content:
             application/json:
@@ -609,6 +640,12 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
           description: Validation Error
         '500':
-          description: Internal error. This is triggered when something an unexpected
-            error occurs on the server side.
+          content:
+            application/json:
+              example:
+                message: Unable to process request
+                status: error
+              schema:
+                $ref: '#/components/schemas/ExceptionResponseModel'
+          description: Internal Server Error
       summary: Http Get Ci Schema V2
